<resources>
    <string name="app_name">What\'s in My Fridge?</string>
    <string name="signup">Sign Up</string>
    <string name="login">Log In</string>
    <string name="title">What\'s In My Fridge?</string>
    <string name="email">Email</string>
    <string name="pwd">Password</string>

    <string name="item_name">Name</string>
    <string name="item_quan">Quantity</string>
    <string name="item_price">Price</string>
    <string name="item_expire">Expiration</string>

    <string name="inventory_item_name_hint">Name of the item</string>
    <string name="inventory_item_quan_hint">Number of items at home</string>
    <string name="inventory_item_price_hint">Cost of item</string>
    <string name="inventory_item_expire_hint">Expiration date (YYYY-MM-DD)</string>
    <string name="add_item_text">Add Item</string>

    <string name="title_activity_inventory_sign_up">InventorySignUpActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="signup_link">Not a member? Sign up now!</string>
    <string name="login_link">Already a member? Login here.</string>
    <string name="name">Name</string>
    <string name="create_account">Create Account</string>

    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_landing_page">Inventory</string>

    <string name="LOGIN_PREFS">ksorum.uw.tacoma.edu.a450project.PREFS</string>
    <string name="LOGGEDIN">loggedin</string>

    <string name="shop_quantity_hint">Quantity of items to purchase</string>
    <string name="price_shop_hint">Last purchase price</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tabs">TabsActivity</string>
    <string name="title_activity_new_landing_page">NewLandingPageActivity</string>

    <string name="edit_item_text">Edit Item</string>
    <string name="shop_edit_item_text">Edit Item</string>
    <string name="logout">Logout</string>
    <string name="share_shopping_list">Share Shopping List</string>


</resources>

