<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/fragment_add_inventory_item"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="40dp"
              android:orientation="vertical"
              tools:context=".inventory.InventoryAddFragment">

    <EditText
        android:id="@+id/edit_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inventory_item_name_hint"
        android:backgroundTint="@color/colorSecondary"
        />

    <EditText
        android:id="@+id/edit_item_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inventory_item_quan_hint"
        android:backgroundTint="@color/colorSecondary"/>

    <EditText
        android:id="@+id/edit_item_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inventory_item_price_hint"
        android:backgroundTint="@color/colorSecondary"/>

    <EditText
        android:id="@+id/edit_item_expiration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inventory_item_expire_hint"
        android:backgroundTint="@color/colorSecondary"/>

    <Button
        android:id="@+id/edit_item_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:onClick="addItem"
        android:text="@string/edit_item_text" />
</LinearLayout>
