<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ksorum.uw.tacoma.edu.a450project.inventory.InventoryItemDetailsFragment">

    <TextView
        android:id="@+id/name_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="155dp"
        android:text="@string/item_name"
        android:textAppearance="@android:style/TextAppearance"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/price_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="16dp"
        android:text="@string/item_price"
        android:textAppearance="@android:style/TextAppearance"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantity_details" />

    <TextView
        android:id="@+id/quantity_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/item_quan"
        android:textAppearance="@android:style/TextAppearance"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_details" />


    <TextView
        android:id="@+id/expiration_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="16dp"
        android:text="@string/item_expire"
        android:textAppearance="@android:style/TextAppearance"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_details"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="96dp"
        android:text="Item Details"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028"
        app:layout_constraintHorizontal_bias="0.387"/>

    <TextView
        android:id="@+id/name_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="98dp"
        android:layout_marginTop="155dp"
        android:text="TextView"
        android:textAppearance="@android:style/TextAppearance"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/quantity_info"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginRight="98dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textAppearance="@android:style/TextAppearance"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_info" />

    <TextView
        android:id="@+id/price_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="98dp"
        android:layout_marginTop="18dp"
        android:text="TextView"
        android:textAppearance="@android:style/TextAppearance"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantity_info" />

    <TextView
        android:id="@+id/expiration_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="98dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textAppearance="@android:style/TextAppearance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_info"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/inventory_detail_edit_button"
        android:layout_width="39dp"
        android:layout_height="28dp"
        android:src="@drawable/edit_icon"
        android:layout_marginBottom="19dp"
        android:background="@null"
        app:layout_constraintBottom_toTopOf="@+id/name_info"
        app:layout_constraintLeft_toRightOf="@+id/textView6"
        android:layout_marginLeft="1dp"
        tools:layout_editor_absoluteY="108dp"
        tools:layout_editor_absoluteX="223dp"/>


</android.support.constraint.ConstraintLayout>
